# new-ocean-agent-os

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: agents.yaml  approval_gated_research_workflow.md  operating_model.md  two_agents.py
noaos/: __init__.py  agent.py  governance.py  knowledge.py  lanes.py
tests/: test_knowledge.py  test_lanes.py
